# ChangeLog for mail-client/mozilla-thunderbird-bin
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/mozilla-thunderbird-bin/Attic/ChangeLog,v 1.24 2005/07/18 15:07:34 agriffis Exp $

*mozilla-thunderbird-bin-1.0.5-r1 (18 Jul 2005)

  18 Jul 2005; Aron Griffis <agriffis@gentoo.org>
  -mozilla-thunderbird-bin-1.0.2.ebuild,
  -mozilla-thunderbird-bin-1.0.5.ebuild,
  +mozilla-thunderbird-bin-1.0.5-r1.ebuild:
  Install /usr/bin/thunderbird-bin stub using install_mozilla_launcher_stub
  from mozilla-launcher.eclass #99084

  15 Jul 2005; Gustavo Felisberto <humpback@gentoo.org>;
  mozilla-thunderbird-bin-1.0.5.ebuild:
  Added amd64, it is working fine and helps fix bug #98855 so that 1.0.4 gets
  removed.

*mozilla-thunderbird-bin-1.0.5 (14 Jul 2005)

  14 Jul 2005; Jory A. Pratt <anarchy@gentoo.org>
  +mozilla-thunderbird-bin-1.0.5.ebuild:
  Security Bump Bug #98855

  10 Jul 2005; Gustavo Felisberto <humpback@gentoo.org>;
  mozilla-thunderbird-bin-1.0.2.ebuild:
  ~amd64 keyword, plus deps and einfo.

  12 May 2005; Aron Griffis <agriffis@gentoo.org>
  -files/icon/mozillathunderbird.desktop, -files/icon/thunderbird-icon.png,
  -mozilla-thunderbird-bin-0.8.ebuild, -mozilla-thunderbird-bin-0.9.ebuild,
  -mozilla-thunderbird-bin-1.0.ebuild,
  -mozilla-thunderbird-bin-1.0-r1.ebuild:
  trim old versions

*mozilla-thunderbird-bin-1.0.2 (23 Mar 2005)

  23 Mar 2005; Brad Laue <brad@gentoo.org>
  +mozilla-thunderbird-bin-1.0.2.ebuild:
  Bump to 1.0.2 and stable x86 for security.

  23 Mar 2005; Seemant Kulleen <seemant@gentoo.org>
  mozilla-thunderbird-bin-0.8.ebuild, mozilla-thunderbird-bin-0.9.ebuild,
  mozilla-thunderbird-bin-1.0.ebuild, mozilla-thunderbird-bin-1.0-r1.ebuild:
  mozilla-launcher to www-client from net-www

*mozilla-thunderbird-bin-1.0-r1 (23 Mar 2005)

  23 Mar 2005; Aron Griffis <agriffis@gentoo.org>
  +mozilla-thunderbird-bin-1.0-r1.ebuild: