@@ -1,6 +1,12 @@
 # ChangeLog for mail-client/mozilla-thunderbird-bin
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/mozilla-thunderbird-bin/Attic/ChangeLog,v 1.24 2005/07/18 15:07:34 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/mozilla-thunderbird-bin/Attic/ChangeLog,v 1.25 2005/07/20 04:01:09 anarchy Exp $
+
+*mozilla-thunderbird-bin-1.0.6 (20 Jul 2005)
+
+  20 Jul 2005; Jory A. Pratt <anarchy@gentoo.org>
+  +mozilla-thunderbird-bin-1.0.6.ebuild:
+  revision bump, api fixes
 
 *mozilla-thunderbird-bin-1.0.5-r1 (18 Jul 2005)
 
